--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -5,17 +5,6 @@
       var month = date.getMonth() + 1;
       var day = date.getDate();
       return date.getFullYear() + "-" + (month >= 10 ? month : '0' + month) + "-" + (day >= 10 ? day : '0' + day);
-    },
-    weather: function (obj) {
-      return obj['weather'] + obj['degree'] + '°' + {
-        "0": "微风", "1": "东北风", "2": "东风", "3": "东南风", "4": "南风", "5": "西南风",
-        "6": "西风", "7": "西北风", "8": "北风", "9": "旋转风"
-      }[obj['wind_direction']] + obj['wind_power'] + "级"
-      obj['weather'] + obj['degree'] + '° • ' + {
-        "0": "微风", "1": "东北风", "2": "东风", "3": "东南风", "4": "南风", "5": "西南风",
-        "6": "西风", "7": "西北风", "8": "北风", "9": "旋转风"
-      }[obj['wind_direction']] + obj['wind_power'] + "级" + " • 湿度" +
-        obj['humidity'] + "%"
     }
   }
 </wxs>
@@ -23,7 +12,7 @@
   <view class="gakefo">
     <view>瑜伽约课工具</view>
     <swiper style="font-size: 20rpx;color: #999;height: 32rpx;" vertical="true" circular="true" duration="300" autoplay="true" interval="3000">
-      <swiper-item>长沙市{{formattor.weather( weather)}}</swiper-item>
+      <swiper-item>长沙市{{weather}}</swiper-item>
       <swiper-item>{{date.cMonth}}月{{date.cDay}}日{{date.ncWeek}}</swiper-item>
       <swiper-item>农历{{date.IMonthCn}}{{date.IDayCn}}</swiper-item>
       <swiper-item>{{bj}}</swiper-item>
