--- a/miniprogram/components/tabs/tabs.wxss
+++ b/miniprogram/components/tabs/tabs.wxss
@@ -1,42 +1,38 @@
-.tabbar {
-  -webkit-tap-highlight-color: transparent;
-  display: flex;
-  position: relative;
-  z-index: 0;
-  align-self: center;
-  padding: 32rpx 0;
-  min-width: 640rpx;
+.wrapper {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    user-select: none;
+    justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    font-size: 24rpx;
+    padding: 28rpx 24rpx 32rpx;
+    background: rgb(255, 255, 255);
+    position: relative;
 }
 
-
-.tabbar-item {
-  font: 500 28rpx/40rpx "Google Sans", Roboto, Arial, sans-serif;
-  letter-spacing: 0.5rpx;
-  color: #202124;
-  display: flex;
-  flex: 0 0 33%;
-  position: relative;
-  max-width: 50%;
-  will-change: auto;
+.wrapper > view {
+    width: 100%;
+    text-align: center;
 }
 
-
-.tabbar-name-active .tabbar-name {
-  background-color: #e8f0fe;
-  color: #1967d2;
+.active {
+    color: #1a73e8;
 }
 
-
-.tabbar-name {
-  -webkit-tap-highlight-color: transparent;
-  align-items: center;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: -4;
-  padding: 16rpx 48rpx;
-  text-align: center;
-  border: 2rpx solid #dadce0;
+.border {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    user-select: none;
+    font-size: 24rpx;
+    height: 6rpx;
+    will-change: left, width;
+    position: absolute;
+    bottom: 20rpx;
+    border-top-left-radius: 6rpx;
+    border-top-right-radius: 6rpx;
+    background-color: rgb(26, 115, 232);
+    transition: left 0.15s cubic-bezier(0.4, 0, 1, 1) 0s, width 0.15s cubic-bezier(0.4, 0, 1, 1) 0s;
 }
