--- a/miniprogram/pages/coach/index.wxss
+++ b/miniprogram/pages/coach/index.wxss
@@ -1,179 +1,122 @@
-.btn {
-  background-color: #fff;
-  text-align: center;
-  font-size: 28rpx;
-  color: #202124;
-  border-radius: 40rpx;
-  height: 48rpx;
-  line-height: 48rpx;
-  border: 2rpx solid #dadce0;
-  padding: 16rpx 26rpx;
-  position: relative;
-  width: 25%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+page {
+    background: #fff;
 }
 
-
-.cover-container {
-  background: #fff;
-  height: 838rpx;
-  position: relative;
+.background {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    height: 20vh;
+    width: 100%;
+    background-color: #749b15;
+    position: relative;
+    margin-bottom: 198rpx;
 }
 
-
-.cover-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  height: 610rpx;
-  width: 100%;
-  margin-bottom: 48rpx;
+.thumbnail {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    min-width: 2rpx;
+    min-height: 2rpx;
+    filter: none;
+    max-width: 100%;
+    box-shadow: 0 2rpx 12rpx 0 rgba(0, 0, 0, 0.16);
+    width: 300rpx;
+    height: 300rpx;
+    border-radius: 50%;
+    transform: translateX(-50%);
+    left: 50%;
+    position: absolute;
+    bottom: -150rpx;
 }
 
-
-.cover-button-group {
-  border-top: 2rpx solid #dadce0;
-  display: flex;
-  justify-content: space-around;
-  padding: 48rpx 0;
-  margin: 0 32rpx;
+.teacher-name {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    margin: 0 0 6rpx;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    max-height: 2.5em;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    line-height: 1.25;
+    text-overflow: ellipsis;
+    font-weight: normal;
+    font-size: 48rpx;
+    text-align: center;
+    color: #202124;
 }
 
-
-.cover-image {
-  width: 300rpx;
-  height: 300rpx;
-  border-radius: 50%;
-  border: 8rpx solid #fff;
-  z-index: 1;
+.introduction {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    font-size: 36rpx;
+    text-align: center;
+    color: rgba(0, 0, 0, .65);
+    padding: 0 32rpx;
 }
 
-
-.card {
-  background: #fff;
-  margin-top: 32rpx;
+.buttons {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    border-top: 2rpx solid #dadce0;
+    display: flex;
+    justify-content: space-around;
+    margin: 48rpx 32rpx;
+    padding: 48rpx 0;
 }
 
-
-.card-title {
-  /* padding: 32rpx 32rpx 24rpx 32rpx;
-  font-size: 32rpx; */
-  padding: 48rpx 0;
-  text-align: center;
-  font-size: 40rpx;
-  line-height: 48rpx;
-  color: #70757a;
+.button {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    text-decoration: none;
+    line-height: 48rpx;
+    border: 2rpx solid #dadce0;
+    padding: 16rpx 26rpx;
+    height: 48rpx;
+    border-radius: 40rpx;
+    font-size: 28rpx;
+    color: #202124;
+    display: flex;
+    width: 25%;
+    justify-content: center;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
-
-.card-title-border {
-  border-bottom: 2rpx solid #dadce0;
+.svg {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    line-height: 48rpx;
+    font-size: 28rpx;
+    color: #202124;
+    width: 48rpx;
+    height: 48rpx;
+    margin-right: 16rpx;
+    fill: #70757a;
 }
 
+.phone {
 
-.gallery {
-  display: flex;
-  overflow-x: auto;
-  position: absolute;
-  transition: transform 600ms cubic-bezier(0.8, 0, 0.5, 1) 0s;
+    background-image: url("data:image/svg+xml;utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' style='fill:%2370757a'%3E%3Cpath d='M20.016 15.375q0.422 0 0.703 0.281t0.281 0.703v3.469q0 1.172-0.984 1.172-6.984 0-12-5.016t-5.016-12q0-0.984 1.172-0.984h3.469q0.422 0 0.703 0.281t0.281 0.703q0 1.828 0.563 3.516 0.188 0.609-0.234 1.031l-1.922 1.688q2.156 4.5 6.891 6.797l1.547-1.969q0.281-0.281 0.703-0.281 0.234 0 0.328 0.047 1.688 0.563 3.516 0.563z'%3E%3C/path%3E%3C/svg%3E")
 }
 
-
-.cover-color-background {
-  background-color: #749b15;
-  width: 100%;
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  height: 310rpx;
+.intro {
+    background-image: url("data:image/svg+xml;utf8,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' style='fill:%2370757a'%3E%3Cpath d='M12 14.016q2.531 0 5.273 1.102t2.742 2.883v2.016h-16.031v-2.016q0-1.781 2.742-2.883t5.273-1.102zM12 12q-1.641 0-2.813-1.172t-1.172-2.813 1.172-2.836 2.813-1.195 2.813 1.195 1.172 2.836-1.172 2.813-2.813 1.172z'%3E%3C/path%3E%3C/svg%3E")
 }
 
-
-.cover-title {
-  position: absolute;
-  top: 500rpx;
-  font-size: 48rpx;
-}
-
-
-.cover-subtitle {
-  position: absolute;
-  top: 568rpx;
-  font-size: 36rpx;
-  color: rgba(0, 0, 0, 0.65);
-}
-
-
-.cover-icon {
-  height: 48rpx;
-  width: 48rpx;
-  margin-right: 16rpx;
-}
-
-
-.gallery-wrapper {
-  position: relative;
-  height: 300rpx;
-  padding: 32rpx;
-}
-
-
-.tabbar {
-  -webkit-tap-highlight-color: transparent;
-  display: flex;
-  position: relative;
-  z-index: 0;
-  align-self: center;
-  margin: 0 56rpx 32rpx;
-  min-width: 640rpx;
-}
-
-
-.tabbar-item {
-  font: 500 28rpx/40rpx "Google Sans", Roboto, Arial, sans-serif;
-  letter-spacing: 0.5rpx;
-  color: #202124;
-  display: flex;
-  flex: 0 0 33%;
-  position: relative;
-  max-width: 50%;
-  will-change: auto;
-}
-
-
-.tabbar-name-active .tabbar-name {
-  background-color: #e8f0fe;
-  color: #1967d2;
-}
-
-
-.tabbar-name {
-  -webkit-tap-highlight-color: transparent;
-  align-items: center;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: -4;
-  padding: 16rpx 48rpx;
-  text-align: center;
-  border: 2rpx solid #dadce0;
-}
-
-.item {
-  color: #202124;
-  display: flex;
-  background-color: #fff;
-  margin: 0 0 20rpx 0;
-  flex-grow: 1;
-  padding: 0 32rpx;
-}
-
-.item + .item {
-  border-top: 2rpx solid #dadce0;
-  padding-top: 16rpx;
+.divider {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    width: 100%;
+    height: 16rpx;
+    background-color: #f1f3f4;
+    margin-bottom: -48rpx;
 }
