--- a/miniprogram/components/empty-viewer/empty-viewer.wxml
+++ b/miniprogram/components/empty-viewer/empty-viewer.wxml
@@ -1,8 +1,12 @@
 <view class="wrapper">
-    <view data-index="{index}}" catchtap="onTap" class="item" wx:for="{weeks}}" wx:key="*this">
-        <viev class=" {index===selected?'active':''}}">{item}}</viev>
+    <image class="img" src="{{app.globalData.staticHost}}/images/empty-image-default.png"></image>
+    <view class="text">
+        未找到相关课程
     </view>
-    <view class="border" style="">
+
+    <view class="empty__bottom">
+        <view catchtap="onTap" class="button">
+            预约课程
+        </view>
     </view>
 </view>
-  <slot></slot>
