--- a/app/static/admin/notice.css
+++ b/app/static/admin/notice.css
@@ -1,12 +1,18 @@
-html, body, h1 {
+html,
+body,
+h1 {
     font-family: Roboto, Helvetica Neue, Arial, sans-serif;
 }
 
-head, body, head *, body * {
+head,
+body,
+head *,
+body * {
     max-height: 999999px;
 }
 
-body, h1 {
+body,
+h1 {
     font-size: small;
 }
 
@@ -26,7 +32,7 @@ textarea {
     resize: none;
     width: 100%;
     flex-grow: 1;
-    padding: 7px 10px;
+    padding: 7px 10px 49px;
     font-size: 14px;
     line-height: 28px;
     box-sizing: border-box;
@@ -39,6 +45,11 @@ textarea {
     display: flex;
     align-items: center;
     border-top: 1px solid #f1f3f4;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #fff;
 }
 
 .button {
@@ -58,4 +69,6 @@ textarea {
 .button-text {
     font-size: 12px;
     padding: 0 4px;
+}
+padding: 0 4px;
 }
