--- a/miniprogram/pages/lesson/lesson.wxss
+++ b/miniprogram/pages/lesson/lesson.wxss
@@ -1,198 +1,242 @@
 page {
-  background: #fff;
-}
-.cover {
-  height: 336rpx;
-}
-.top-header {
-  margin: 40rpx 48rpx 0;
-}
-.top-title {
-  font: 400 28rpx/40rpx Roboto, Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #202124;
-  font-size: 40rpx;
-  font-weight: 400;
-  line-height: 56rpx;
-  margin-bottom: 8rpx;
-}
-.top-subtitle {
-  font: 400 28rpx/40rpx Roboto, Arial, sans-serif;
-  color: #70757a;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 100%;
-  margin: -28rpx 0;
-}
-.top-subtitle-container {
-  display: flex;
-  align-items: center;
-  padding: 28rpx 0;
-  font-size: 28rpx;
-  line-height: 40rpx;
-}
-.ajphuy {
-  font: 400 28rpx/40rpx Roboto, Arial, sans-serif;
-  color: #70757a;
-  display: inline-block;
-  font-size: 30rpx;
-  font-weight: 500;
-  overflow: hidden;
-  position: relative;
-  line-height: 40rpx;
-  font-family: "Google Sans", Roboto, Arial, sans-serif;
-  border: 1px solid #dadce0;
-  border-radius: 200rpx;
-  border-color: #749b15;
-  margin: 32rpx 48rpx 0;
-  text-align: center;
-}
-.fkaebx {
-  margin: 18rpx 40rpx;
-  font: 400 24rpx/32rpx Roboto, Arial, sans-serif;
-  color: #749b15;
-  padding: 0 16rpx;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  display: block;
-}
-.header {
-  font: 500 32rpx/40rpx "Google Sans", Roboto, Arial, sans-serif;
-  color: #202124;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 34rpx 30rpx 30rpx 30rpx;
-}
-.comments {
-  font: 400 28rpx/40rpx Roboto, Arial, sans-serif;
-  color: #70757a;
-  padding: 0 30rpx 30rpx 30rpx;
-}
-.comment-item {
-  border-bottom: solid 2rpx #dadce0;
-  padding: 20rpx 0;
-  font-size: 26rpx;
-  font-weight: 400;
-  line-height: 40rpx;
-  color: #3c4043;
-}
-.comment-item:first-child {
-  border-top: solid 2rpx #dadce0;
-}
-.comment-wrapper {
-  display: flex;
-}
-.comment-left {
-  width: 80rpx;
-  height: 80rpx;
-  border: none;
-  background-color: red;
-  border-radius: 50%;
-  flex-shrink: 0;
-  overflow: hidden;
-}
-.comment-right {
-  font-size: 26rpx;
-  font-weight: 400;
-  line-height: 40rpx;
-  color: #3c4043;
-  margin-left: 20rpx;
-  flex-grow: 1;
-}
-.comment-add-wrapper {
-  color: #749b15;
-  font-size: 28rpx;
-  font-weight: 500;
-  padding: 0 32rpx 0 24rpx;
-  display: flex;
-  align-items: center;
-}
-.photos {
-  font: 400 28rpx/40rpx Roboto, Arial, sans-serif;
-  color: #70757a;
-  display: flex;
-  overflow-x: auto;
-  overflow-y: hidden;
-  padding-bottom: 34rpx;
-  white-space: nowrap;
-}
-.photos::-webkit-scrollbar {
-  display: none;
-}
-.photo {
-  border-radius: 16rpx;
-  box-shadow: 0 2rpx 12rpx 0 rgba(0, 0, 0, 0.16);
-  margin-right: 16rpx;
-  display: inline-block;
-  height: 304rpx;
-  overflow: hidden;
-  position: relative;
-  width: 304rpx;
-  flex-shrink: 0;
+    background: #fff;
 }
 
-.photo:first-child {
-  margin-left: 32rpx;
+.wrapper {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    padding-top: 62.5%;
+    position: relative;
 }
-.divider {
-  height: 32rpx;
-  border-bottom: 2rpx solid #dadce0;
-}
-.comments-subtitle {
-  color: #757575;
-}
-.wztfuh {
-  color: #70757a;
-  text-align: center;
-  height: 20vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 
-  border-top: solid 2rpx #dadce0;
+.teacher-name {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    box-shadow: 0 4rpx 8rpx 0 rgb(32 33 36 / 16%);
+    position: absolute;
+    padding: 16rpx 28rpx;
+    bottom: -12rpx;
+    right: 32rpx;
+    background-color: rgb(26, 115, 232);
+    color: #fff;
+    border-radius: 16rpx;
+    font-size: 40rpx;
+    line-height: 48rpx;
+    font-weight: 500;
+    z-index: 1;
 }
-.cover-image {
-  width: 100%;
-  height: 100%;
+
+.thumbnail {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
-.top-subtitle-star {
-  background-size: cover;
-  width: 24rpx;
-  height: 24rpx;
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMjQgMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgc3R5bGU9ImZpbGw6I2ZiYmMwNCI+PHBhdGggZD0iTTEyIDE3LjI3TDE4LjE4IDIxbC0xLjY0LTcuMDNMMjIgOS4yNGwtNy4xOS0uNjFMMTIgMiA5LjE5IDguNjMgMiA5LjI0bDUuNDYgNC43M0w1LjgyIDIxIDEyIDE3LjI3eiI+PC9wYXRoPjwvc3ZnPg==);
+
+.img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
-.comment-add {
-  background-size: cover;
-  width: 24rpx;
-  height: 24rpx;
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMjQgMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgc3R5bGU9ImZpbGw6Izc0OWIxNSI+PHBhdGggZD0iTTIwIDEzaC03djdoLTJ2LTdINHYtMmg3VjRoMnY3aDd2MnoiPjwvcGF0aD48L3N2Zz4=);
+
+.details {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    margin: 40rpx 48rpx 0;
 }
-.comment-add-text {
-  margin-left: 16rpx;
+
+.title {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    margin: 0 0 6rpx;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    max-height: 2.5em;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 48rpx;
+    line-height: 64rpx;
+    font-weight: 500;
+    margin-bottom: 8rpx;
 }
-.expand {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #202124;
-  font-size: 28rpx;
-  line-height: 48rpx;
-  padding: 16rpx 26rpx;
-}
+
+
 .description {
-  padding: 0 32rpx;
-  font-size: 28rpx;
-  color: #70757a;
-  line-height: 40rpx;
+
+    font-size: 28rpx;
+    line-height: 40rpx;
+    color: rgb(32, 33, 36);
+    margin-top: 32rpx;
 }
-.arrow {
-  background-size: cover;
-  width: 48rpx;
-  height: 48rpx;
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMjQgMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgc3R5bGU9ImZpbGw6IzcwNzU3YSI+PHBhdGggZD0iTTE2LjU5IDguNTlMMTIgMTMuMTcgNy40MSA4LjU5IDYgMTBsNiA2IDYtNnoiPjwvcGF0aD48L3N2Zz4=);
+
+.lines {
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+}
+
+.expand-button {
+    height: 48rpx;
+    margin-top: 32rpx;
+    display: flex;
+    justify-content: center;
+    font-size: 32rpx;
+    align-items: center;
+    line-height: 48rpx;
+}
+
+.subtitle {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    font-size: 28rpx;
+    line-height: 40rpx;
+    color: rgb(95, 99, 104);
+}
+
+.expand-button view {
+    width: 24px;
+    height: 24px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M7.406 8.578l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'%3E%3C/path%3E%3C/svg%3E");
+    transition: transform 250ms;
+}
+
+.submit-button {
+    margin-top: 48rpx;
+    border: 2rpx solid #1967d2;
+    border-radius: 200rpx;
+    height: 68rpx;
+    font-size: 24rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1967d2;
+}
+
+.submit-button.disabled {
+    border-color: rgba(0, 0, 0, .35);
+    color: rgba(0, 0, 0, .35);
+}
+
+.photos {
+    padding: 0 32rpx;
+    margin-top: 48rpx;
+    border-top: 2rpx solid #dadce0;
+}
+
+.photos-header {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    max-height: 2.5em;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: normal;
+    margin: 48rpx 0 32rpx;
+    font-size: 40rpx;
+    line-height: 48rpx;
+    color: #202124;
+}
+
+.photo-items {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+}
+
+.photo-item:first-child {
+    margin-left: 32rpx;
+}
+
+.photo-item {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    white-space: nowrap;
+    color: #70757a;
+    display: inline-block;
+    height: 304rpx;
+    margin-right: 16rpx;
+    width: 304rpx;
+    border-radius: 16rpx;
+    box-shadow: 0 2rpx 12rpx 0 rgba(0, 0, 0, 0.16);
+    flex: 0 0 auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.comments {
+    word-wrap: break-word;
+    color: #030303;
+    -webkit-text-size-adjust: 100%;
+    font-size: 1.2rem;
+    padding: 0 32rpx;
+    margin-top: 48rpx;
+    border-top: 2rpx solid #dadce0;
+    justify-content: space-between;
+    display: flex;
+}
+
+.comments-title {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    max-height: 2.5em;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: normal;
+    margin: 48rpx 0 32rpx;
+    font-size: 40rpx;
+    line-height: 48rpx;
+    color: #202124;
+}
+
+.comment-button {
+    word-wrap: break-word;
+    -webkit-text-size-adjust: 100%;
+    align-items: center;
+    border-radius: 32rpx;
+    color: rgb(26, 115, 232);
+    display: inline-flex;
+    font-size: 28rpx;
+    justify-content: center;
+    padding: 0 32rpx 0 24rpx;
+    height: 48rpx;
+    margin-top: 48rpx;
+}
+
+.comment-button view {
+    width: 36rpx;
+    height: 36rpx;
+    margin-right: 16rpx;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' style='width: 18px;height: 18px;margin-right:8px;fill:rgb(26, 115, 232)' viewBox='0 0 24 24' focusable='false'%3E%3Cpath d='M20 13h-7v7h-2v-7H4v-2h7V4h2v7h7v2z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.comments-empty {
+    color: #70757a;
+    margin: 120rpx 0 120rpx;
+    font-size: 28rpx;
+    line-height: 40rpx;
+    text-align: center;
+}
+
+.rotate {
+    transform: rotate(180deg);
 }
